# laprime

./: .replit  App.tsx  Dockerfile  Procfile  README.md  build_log.txt  create_admin.js  create_admin.mjs  create_admin.py  frontend_out.txt  git_status.txt  index.html  metadata.json  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railway.json  replit.md  requirements.txt  test_chat_api.py  tsconfig.json  vite.config.ts
attached_assets/: Briefing – Site da Clínica de Estética (respostas)_1763553647763.xlsx  Pasted-Execute-integralmente-as-instru-es-abaixo-N-o-fa-a-perg_1767901046372.txt
backend/: .env  cleanup_data.py  identify_python.py  populate_content.py  requirements.txt  reset_admin.py  server_log.txt  sql_app.db  test_admin_create.py  test_db.py  test_groq.py  test_register.py  update_password.py  update_role.py  verify_api.py
backend/app/: main.py  populate_content.py
components/: AboutSection.tsx  ContactSection.tsx  FeaturedTreatments.tsx  FloatingWhatsApp.tsx  Footer.tsx  ServicesSection.tsx
pages/: CiliosPage.tsx  OdontologiaPage.tsx  SalaoPage.tsx  UnhasPage.tsx
src/: App.tsx  index.css
src/components/: AboutSection.tsx  AdminDashboard.tsx  AppointmentForm.tsx  BinaChatbot.tsx  BlogPage.tsx  BlogPostPage.tsx  BrowLaminationPage.tsx  CiliosPage.tsx  ClientDashboard.tsx  ContactSection.tsx  ConversationalAppointment.tsx  DesignHennaPage.tsx  EsteticaPage.tsx  FeaturedTreatments.tsx  FloatingWhatsApp.tsx  Footer.tsx  GalleryPage.tsx  Header.tsx  Hero.tsx  HomePage.tsx  LandingPage.tsx  LiftingPage.tsx  Login.tsx  Logo.tsx  Navbar.tsx  (+11 more)
(+17 files in other folders)
